Time field added and Generic function call handled

--- a/frontend/src/app/applications/applications.page.html
+++ b/frontend/src/app/applications/applications.page.html
@@ -52,7 +52,7 @@
             <h1>{{data.firstName }} {{ data.lastName}}</h1>
             <p>
               <ion-icon name="time-outline"></ion-icon>
-              time
+              {{data.submittedTime}}
             </p>
           </ion-label>
         </ion-item>
