--- a/frontend/src/app/applications/applications.page.html
+++ b/frontend/src/app/applications/applications.page.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div style="padding: 1.5rem; padding-top: 0.5rem !important;">
+    <div class="list-item">
       <ion-list
         *ngFor="
     let data of notFinishedEntry"
