--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,17 +1,13 @@
 <ion-header class="ion-no-border ion-padding">
   <ion-toolbar>
     <ion-buttons slot="end">
-      <ion-button
-        id="notification-button"
-        style="min-height: 100px;"
-        (click)="goToApplications()"
-      >
+      <ion-button class="notification-button" (click)="goToApplications()">
         <ion-icon
           class="custom-icon"
           name="file-tray-stacked-outline"
         ></ion-icon>
         <ion-badge
-          id="notifications-badge"
+          class="notifications-badge"
           color="danger"
           *ngIf="applicationSize"
           >{{applicationSize}}</ion-badge
