--- a/frontend/src/app/applications/applications.page.scss
+++ b/frontend/src/app/applications/applications.page.scss
@@ -5,3 +5,7 @@
 .main-description.info-content {
   margin-bottom: 0.5rem;
 }
+.list-item {
+  padding: 1.5rem;
+  padding-top: 0.5rem !important;
+}
