Improve handling of whitespaces in the key competencies modal

--- a/frontend/src/app/forms/steps/key-competencies/rating-modal/rating-modal.component.html
+++ b/frontend/src/app/forms/steps/key-competencies/rating-modal/rating-modal.component.html
@@ -67,7 +67,7 @@
     <div class="bottom-content" *ngIf="searchInput.value">
       <span>
         Not found what you were looking for? You can also add your search term
-        ("{{ searchInput.value }}") to the list.
+        ("{{ searchInput.value | trim }}") to the list.
       </span>
       <div class="add-to-list-button-container ion-margin-top">
         <ion-button color="primary" (click)="addSearchTermToList()">
