--- a/frontend/src/app/forms/image-viewer/internal/image-viewer.component.scss
+++ b/frontend/src/app/forms/image-viewer/internal/image-viewer.component.scss
@@ -1,3 +1,17 @@
+/*
+  In this file, we are not using Ionic's color variables.
+  The reason: We want this Image Viewer to look the same, no matter if Dark Mode is turned on or off,
+  or if someone has adjusted other settings regarding the global css variables.
+*/
+
+ion-toolbar,
+ion-content {
+  --background: #000000;
+}
+ion-header ion-button {
+  --color: #ffffff;
+}
+
 ion-slides {
   height: 100%;
 }
