--- a/frontend/src/app/forms/image-viewer/internal/image-viewer.component.html
+++ b/frontend/src/app/forms/image-viewer/internal/image-viewer.component.html
@@ -5,11 +5,17 @@
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="deleteCurrentImage()">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-slides [options]="sliderOptions">
+  <ion-slides [options]="sliderOptions" #slider>
     <ion-slide *ngFor="let control of providedSettings.imagesBase64.controls">
       <img [src]="control.value" />
     </ion-slide>
