--- a/frontend/src/app/forms/image-viewer/internal/image-viewer.component.scss
+++ b/frontend/src/app/forms/image-viewer/internal/image-viewer.component.scss
@@ -8,7 +8,8 @@ ion-toolbar,
 ion-content {
   --background: #000000;
 }
-ion-header ion-button {
+ion-header ion-button,
+ion-header ion-title {
   --color: #ffffff;
 }
 
