--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <VBox prefHeight="5"/>
+      <VBox prefHeight="5" />
    </top>
    <center>
    <SplitPane dividerPositions="0.2644110275689223" prefHeight="520.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
@@ -54,15 +54,15 @@
                           <Tab text="Information">
                              <SplitPane dividerPositions="0.5, 0.5" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
-                                   <TitledPane animated="false" collapsible="false" text="Education Info">
+                                   <TitledPane animated="false" collapsible="false" text="Education Info" wrapText="true">
                                       <content>
-                                         <TableView prefHeight="81.0" prefWidth="590.0">
+                                         <TableView fx:id="eduInfoTblFX" prefHeight="81.0" prefWidth="590.0">
                                             <columns>
-                                               <TableColumn prefWidth="75.0" text="University" />
-                                               <TableColumn prefWidth="75.0" text="Subject" />
-                                               <TableColumn prefWidth="75.0" text="Degree" />
-                                               <TableColumn prefWidth="75.0" text="Grade" />
-                                               <TableColumn prefWidth="90.0" text="Graduation Year" />
+                                               <TableColumn fx:id="universityFX" prefWidth="75.0" text="University" />
+                                               <TableColumn fx:id="subjectFX" prefWidth="75.0" text="Subject" />
+                                               <TableColumn fx:id="degreeFX" prefWidth="75.0" text="Degree" />
+                                               <TableColumn fx:id="gradeFX" prefWidth="75.0" text="Grade" />
+                                               <TableColumn fx:id="gradYearFX" prefWidth="90.0" text="Graduation Year" />
                                             </columns>
                                             <columnResizePolicy>
                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -73,14 +73,14 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane animated="false" collapsible="false" prefHeight="98.0" prefWidth="569.0" text="Key Competencies">
+                                   <TitledPane animated="false" collapsible="false" prefHeight="98.0" prefWidth="569.0" text="Key Competencies" wrapText="true">
                                       <content>
                                          <TableView prefHeight="78.0" prefWidth="590.0">
                                             <columns>
-                                               <TableColumn prefWidth="213.0" text="Programming Languages &amp; Frameworks" />
-                                               <TableColumn prefWidth="217.0" text="Databases" />
-                                               <TableColumn prefWidth="181.0" text="Professional Software" />
-                                               <TableColumn prefWidth="110.0" text="Spoken Languages" />
+                                               <TableColumn fx:id="proL_frameWFX" minWidth="50.0" prefWidth="238.0" text="Programming Languages &amp; Frameworks" />
+                                               <TableColumn fx:id="dbFX" prefWidth="50.0" text="Databases" />
+                                               <TableColumn fx:id="proSoftFX" prefWidth="-1.0" text="Professional Software" />
+                                               <TableColumn fx:id="spoLanFX" prefWidth="-1.0" text="Spoken Languages" />
                                             </columns>
                                             <columnResizePolicy>
                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -88,12 +88,12 @@
                                          </TableView>
                                       </content>
                                    </TitledPane>
-                                   <TitledPane animated="false" collapsible="false" text="Education Info">
+                                   <TitledPane animated="false" collapsible="false" text="Education Info" wrapText="true">
                                       <content>
                                          <TableView prefHeight="146.0" prefWidth="590.0">
                                             <columns>
-                                               <TableColumn prefWidth="75.0" text="Position" />
-                                               <TableColumn prefWidth="75.0" text="Industries" />
+                                               <TableColumn fx:id="posFX" prefWidth="75.0" text="Position" />
+                                               <TableColumn fx:id="indFX" prefWidth="75.0" text="Industries" />
                                             </columns>
                                             <columnResizePolicy>
                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -126,12 +126,12 @@
    </SplitPane>
    </center>
    <left>
-      <HBox prefWidth="5"/>
+      <HBox prefWidth="5" />
    </left>
    <right>
-      <HBox prefWidth="5"/>
+      <HBox prefWidth="5" />
    </right>
    <bottom>
-      <VBox prefHeight="5"/>
+      <VBox prefHeight="5" />
    </bottom>
 </BorderPane>
