--- a/frontend/src/app/forms/steps/documents/documents.component.html
+++ b/frontend/src/app/forms/steps/documents/documents.component.html
@@ -29,6 +29,9 @@
     "
     (click)="openImageViewer(i)"
   >
-    <div class="make-square"><img [src]="control.value" /></div>
+    <div class="make-square">
+      <!-- In case of performance problems: It could help if we resized the image or used some sort of URL for it. For now, we just use the large base64 string here. -->
+      <img [src]="control.value" />
+    </div>
   </div>
 </div>
