added configuration for client server integration

--- a/frontend/src/app/applications-upload/applications-upload.page.html
+++ b/frontend/src/app/applications-upload/applications-upload.page.html
@@ -13,7 +13,7 @@
   <div class="main-container">
     <div class="content">
       <div class="main-description custom-style">
-        uploading application
+        uploading application {{uploadSize}}/{{totalSize}}
       </div>
     </div>
 
