--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <top>
@@ -13,88 +15,171 @@
    <SplitPane dividerPositions="0.2644110275689223" prefHeight="520.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
       <items>
       <!--  -->
-         <SplitPane orientation="VERTICAL" prefHeight="200.0" prefWidth="50">
-            <ImageView fx:id="imgFX" fitHeight="238.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../Style/welcomescreen.png" />
-            </image>
-         </ImageView>
+         <SplitPane dividerPositions="0.41598360655737704" maxWidth="200.0" orientation="VERTICAL" prefHeight="511.0" prefWidth="200.0">
+            <items>
+               <ImageView fx:id="imgFX" fitHeight="238.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Style/welcomescreen.png" />
+               </image>
+            </ImageView>
+               <TitledPane animated="false" collapsible="true" maxHeight="1000.0" prefHeight="592.0" prefWidth="200.0" text="Basic Info">
+                  <GridPane prefHeight="283.0" prefWidth="198.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="50.0" minHeight="30.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="102.0" text="First Name" textAlignment="CENTER">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="33.0" prefWidth="103.0" text="Last Name" textAlignment="CENTER" GridPane.rowIndex="1">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label contentDisplay="CENTER" prefHeight="33.0" prefWidth="103.0" text="E-mail" textAlignment="CENTER" GridPane.rowIndex="2">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="33.0" prefWidth="103.0" text="Phone Number" wrapText="true" GridPane.rowIndex="3">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="32.0" prefWidth="103.0" text="LinkedIn" GridPane.rowIndex="4">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="34.0" prefWidth="103.0" text="Xing" GridPane.rowIndex="5">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label fx:id="lblFNameFX" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin></Label>
+                        <Label fx:id="lblLNameFX" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="10.0" />
+                           </GridPane.margin></Label>
+                        <Label fx:id="lblEmailFX" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="lblPNumberFX" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="lblLinkedInFX" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                        <Label fx:id="lblXingFX" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding></Label>
+                     </children>
+                  </GridPane>
+               </TitledPane>
+
+
+            </items>
+
          </SplitPane>
 
 
          <SplitPane orientation="VERTICAL" prefHeight="200.0">
            <items>
-              <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
+              <SplitPane orientation="VERTICAL" prefHeight="470.0" prefWidth="582.0">
                  <items>
-                    <TitledPane animated="false" collapsible="false" prefHeight="71.0" prefWidth="392.0" text="Basic Info">
+                    <!--
+                    <TitledPane animated="false" collapsible="false" maxHeight="0" prefHeight="112.0" prefWidth="577.0" text="Basic Info" visible="false">
                        <content>
-                          <TableView fx:id="basicInfoTblFX" prefHeight="200.0" prefWidth="200.0">
+                          <TableView fx:id="basicInfoTblFX" prefHeight="36.0" prefWidth="445.0">
+
                              <columns>
                                 <TableColumn fx:id="firstNameFX" prefWidth="75.0" text="First Name" />
                                 <TableColumn fx:id="lastNameFX" prefWidth="75.0" text="Last Name" />
-                                <TableColumn fx:id="eMailFX" prefWidth="75.0" text="E-mail" />
-                                <TableColumn fx:id="pNumberFX" prefWidth="75.0" text="Phone Number" />
+                                <TableColumn fx:id="eMailFX" prefWidth="85.0" text="E-mail" />
+                                <TableColumn fx:id="pNumberFX" prefWidth="107.0" text="Phone Number" />
                                 <TableColumn fx:id="linkedInFX" prefWidth="75.0" text="LinkedIn" />
-                                <TableColumn prefWidth="75.0" text="Xing" fx:id="xingFX" />
+                                <TableColumn prefWidth="33.0" text="Xing" fx:id="xingFX" />
 
                              </columns>
-                              <columnResizePolicy>
-                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                              </columnResizePolicy>
+
+                             <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                             </columnResizePolicy>
                           </TableView>
                        </content>
                     </TitledPane>
-
-
-                    <TabPane prefHeight="300.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+                     -->
+                    <TabPane prefHeight="458.0" prefWidth="582.0" rotateGraphic="true" tabClosingPolicy="UNAVAILABLE">
                        <tabs>
                           <Tab text="Information">
-                             <SplitPane dividerPositions="0.5, 0.5" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
+                             <SplitPane dividerPositions="0.2358974358974359, 0.6128205128205129" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
-                                   <TitledPane animated="false" collapsible="false" text="Education Info" wrapText="true">
+                                   <TitledPane maxHeight="1000.0" prefHeight="89.0" prefWidth="582.0" text="Education Info" wrapText="true">
                                       <content>
-                                         <TableView fx:id="eduInfoTblFX" prefHeight="81.0" prefWidth="590.0">
+                                         <TableView fx:id="eduInfoTblFX" maxHeight="500.0" minHeight="50.0" prefHeight="150.0" prefWidth="580.0">
                                             <columns>
-                                               <TableColumn fx:id="universityFX" prefWidth="75.0" text="University" />
-                                               <TableColumn fx:id="subjectFX" prefWidth="75.0" text="Subject" />
-                                               <TableColumn fx:id="degreeFX" prefWidth="75.0" text="Degree" />
-                                               <TableColumn fx:id="gradeFX" prefWidth="75.0" text="Grade" />
-                                               <TableColumn fx:id="gradYearFX" prefWidth="90.0" text="Graduation Year" />
+                                               <TableColumn fx:id="universityFX" prefWidth="142.0" text="University" />
+                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" text="Subject" />
+                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" text="Degree" />
+                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" resizable="false" text="Grade" />
+                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" text="Graduation Year" />
                                             </columns>
-                                            <columnResizePolicy>
-                                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                            </columnResizePolicy>
                                          </TableView>
                                       </content>
                                       <cursor>
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane animated="false" collapsible="false" prefHeight="98.0" prefWidth="569.0" text="Key Competencies" wrapText="true">
+                                   <TitledPane prefHeight="141.0" prefWidth="582.0" text="Key Competencies" wrapText="true">
                                       <content>
-                                         <TableView prefHeight="78.0" prefWidth="590.0">
+                                         <TableView maxHeight="600.0" minHeight="50.0" prefHeight="400.0" prefWidth="580.0">
                                             <columns>
-                                               <TableColumn fx:id="proL_frameWFX" minWidth="50.0" prefWidth="238.0" text="Programming Languages &amp; Frameworks" />
-                                               <TableColumn fx:id="dbFX" prefWidth="50.0" text="Databases" />
-                                               <TableColumn fx:id="proSoftFX" prefWidth="-1.0" text="Professional Software" />
-                                               <TableColumn fx:id="spoLanFX" prefWidth="-1.0" text="Spoken Languages" />
+                                               <TableColumn fx:id="proL_frameWFX" minWidth="50.0" prefWidth="178.0" text="Programming Languages &amp; Frameworks" />
+                                               <TableColumn fx:id="dbFX" prefWidth="141.0" text="Databases" />
+                                               <TableColumn fx:id="proSoftFX" prefWidth="143.0" text="Professional Software" />
+                                               <TableColumn fx:id="spoLanFX" prefWidth="118.0" resizable="false" text="Spoken Languages" />
                                             </columns>
-                                            <columnResizePolicy>
-                                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                            </columnResizePolicy>
                                          </TableView>
                                       </content>
                                    </TitledPane>
-                                   <TitledPane animated="false" collapsible="false" text="Education Info" wrapText="true">
+                                   <TitledPane maxHeight="400.0" prefHeight="149.0" prefWidth="582.0" text="Education Info" wrapText="true">
                                       <content>
-                                         <TableView prefHeight="146.0" prefWidth="590.0">
+                                         <TableView maxHeight="800.0" minHeight="50.0" prefHeight="250.0" prefWidth="580.0">
                                             <columns>
-                                               <TableColumn fx:id="posFX" prefWidth="75.0" text="Position" />
-                                               <TableColumn fx:id="indFX" prefWidth="75.0" text="Industries" />
+                                               <TableColumn fx:id="posFX" prefWidth="274.0" text="Position" />
+                                               <TableColumn fx:id="indFX" prefWidth="306.0" resizable="false" text="Industries" />
                                             </columns>
-                                            <columnResizePolicy>
-                                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                            </columnResizePolicy>
                                          </TableView>
                                       </content>
                                       <cursor>
