local storage deletion on successful application upload

--- a/frontend/src/app/applications-upload/applications-upload.page.html
+++ b/frontend/src/app/applications-upload/applications-upload.page.html
@@ -15,7 +15,7 @@
       <div class="main-description custom-style">
         uploading application {{uploadSize}}/{{totalSize}}
       </div>
-      <div class="spinner-css"><ion-spinner size="large"></ion-spinner></div>
+      <div class="spinner-css"><ion-spinner></ion-spinner></div>
     </div>
 
     <div class="buttons-container button-css">
