--- a/frontend/src/app/privacy/privacy.page.scss
+++ b/frontend/src/app/privacy/privacy.page.scss
@@ -20,7 +20,7 @@
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid var(--ion-color-medium-tint);
+  border-top: 1px solid var(--ion-color-light-shade);
   margin: 1em 0;
   padding: 0;
 }
